--- a/src/Drawers.scss
+++ b/src/Drawers.scss
@@ -1,3 +1,5 @@
+$drawer-background: white !default;
+
 .react-drawers_drawers {
   position: absolute;
   top: 0;
@@ -11,7 +13,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: white;
+    background: $drawer-background;
     > .react-drawers_drawer-content {
       height: 100%;
       overflow: auto;
