--- a/src/Drawers.scss
+++ b/src/Drawers.scss
@@ -29,6 +29,10 @@ $horizontal-offset: 10% !default;
     transition: transform $transition-duration;
     &.out {
       transform: translateX(100%);
+      display: none;
+      &.next {
+        display: block;
+      }
     }
     &.in {
       transform: translateX(0%);
