--- a/src/Drawers.scss
+++ b/src/Drawers.scss
@@ -1,6 +1,5 @@
 $drawer-background: white !default;
 $drawer-item-height: 50px !default;
-$transition-duration: 200ms !default;
 $horizontal-offset: 10% !default;
 
 .react-drawers_drawers {
@@ -26,7 +25,7 @@ $horizontal-offset: 10% !default;
         min-height: $drawer-item-height;
       }
     }
-    transition: transform $transition-duration;
+    // transition: transform $transition-duration;
     &.out {
       transform: translateX(100% + $horizontal-offset);
       display: none;
